🔨 fix sidebar width on small viewports

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -861,6 +861,10 @@ a {
 				min-height: 2rem;
 				line-height: 1.3rem;
 			}
+
+			.sidebar-wrapper {
+				width: 2.3rem;
+			}
 		}
 	}
 }
